--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.title=Bibliotexas API
+springdoc.swagger-ui.description=API documentation for Bibliotexas project
+springdoc.swagger-ui.path=/swagger-ui.html
